test/positive/feature_fieldinitializers.java

public class feature_fieldinitializers {
  public feature_fieldinitializers() {}
  protected int x = 42;
}

