test/negative/feature_staticinitializers.java

public class feature_staticinitializers {
  public static int x;
  static {
    x = 42;
  }
  public feature_staticinitializers() {}
}

